<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:fillViewport="true"
    android:layout_weight="1">
<RelativeLayout android:id="@+id/RelativeLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="#000"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help12"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textStyle="bold"
        android:textColor="#000"/>/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help22"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:padding="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:textStyle="bold"
        android:textColor="#000"/>/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help32"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:padding="20dp"/>
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/attachment_44109245"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:paddingBottom="20dp"

        />
</RelativeLayout>
    </ScrollView>
